src/objects/Supported_Product__c.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supported_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Organization__c</fullName>
        <label>Product Organization</label>
        <referenceTo>Product_Organization__c</referenceTo>
        <relationshipLabel>Supported Products</relationshipLabel>
        <relationshipName>Supported_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Supported Products</relationshipLabel>
        <relationshipName>Supported_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Supported Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Supported Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supported Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>